examples/test/testpolicy18046.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18046
  namespace: namespace496
spec:
  podSelector:
    matchLabels:
      key2: value24
      key5: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value28
          key47: value18
          key35: value7
      podSelector:
        matchLabels:
          key30: value22
          key31: value29
